--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <img src="/img/logo.png" height="24px" width="24px">
-                <a class="navbar-brand" href="#"> | PinhalMusic</a>
+                <a class="navbar-brand" href="#">PinhalMusic</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -65,13 +65,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/banner.jpg" class="d-block">
+                <img src="./img/banner.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="./img/banner2.jpg" class="d-block">
+                <img src="./img/banner2.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="./img/banner3.jpg" class="d-block">
+                <img src="./img/banner3.jpg" class="d-block w-100">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
