ajustada imagens do carousel

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 </head>
 
 <body>
-<div class="container-fluid">    
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="border-radius: 10px;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <img src="/img/logo.png" height="24px" width="24px">
                 <a class="navbar-brand" href="#">PinhalMusic</a>
@@ -101,44 +100,59 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
+            <img src="./img/card-02.png" class="card-img-top" style="border-radius: 20px;">
             <div class="card-body">
                 <p class="card-text">
                     Seja para a realização de pequenos reparos ou para grandes revitalizações, nossa equipe de
                     profissionais está extremamente capacitada para recuperar o seu tão querido instrumento.<br><br>
-                    Afinal de contas, quem é que não tem aquele violãozinho velho, que foi passando de geração em geração.
-                    A gente entende o valor sentimental do instrumento, portanto fique tranquilo, que vamos trabalhar
+                    Afinal de contas, quem é que não tem aquele violãozinho velho, que foi passando de geração em
+                    geração.
+                    A gente entende o valor sentimental do instrumento, portanto fique tranquilo, que vamos
+                    trabalhar
                     com muito carinho para que ele alegre os encontros de família e amigos novamente.
                     <br><br><br><br><br>
                 </p>
             </div>
-            <img src="./img/card-02.png" class="card-img-top" style="border-radius: 20px;">
         </div>
         <div class="card" style="border-radius: 20px;">
             <img src="./img/card-03.png" class="card-img-top" style="border-radius: 20px;">
             <div class="card-body">
                 <p class="card-text">
-                    Você sente que está na hora de ir ao próximo nível, porém não quer gastar muito para ter o instrumento 
-                    à altura de suas habilidades? <br> 
-                    Com o nosso programa de <strong><i>upgrades</i></strong> o instrumento dos seus sonhos pode estar mais
+                    Você sente que está na hora de ir ao próximo nível, porém não quer gastar muito para ter o
+                    instrumento
+                    à altura de suas habilidades? <br>
+                    Com o nosso programa de <strong><i>upgrades</i></strong> o instrumento dos seus sonhos pode
+                    estar mais
                     próximo do que você pode imaginar. Mas como isso funciona? É muito simples!!<br>
-                    O seu instrumento usado é recebido como parte do valor na compra de um instrumento novinho! Nossa equipe
+                    O seu instrumento usado é recebido como parte do valor na compra de um instrumento novinho!
+                    Nossa equipe
                     de profissionais fará uma justa avaliação para estipular o valor que será abatido na compra.
                 </p>
             </div>
         </div>
     </div>
-
-
-    
-    <footer id="footer" class="footer mt-auto py-3 bg-dark">
-        <div>
-            Todos os direitos revervados para <br>
-            PinhalMusic Instrumentos Musicais LTDA <br>
+    <br><br>
+    <div class="card text-center" style="border-radius: 20px;">
+        <div class="card-body">
+            <h5 class="card-title">COMPROMISSO</h5>
+            <p class="card-text">
+                Nosso compromisso é entregar qualidade aos nossos clientes, utilizando processos padronizados
+                de controle e garantindo que nossos produtos superem suas espectativas!!
+                <br><br>
+                Clique abaixo para conhecer melhor a gente!!
+            </p>
+            <a href="./pages/sobre.html" class="btn btn-primary">Sobre Nós</a>
+        </div>
+    </div>
+    <br><br>
+    <footer class="footer bg-dark py-3" style="text-align: center;">
+        <div class="container-fluid text-muted">
+            Todos os direitos revervados <br>
+            PinhalMusic Instrumentos Musicais LTDA <br> 
             Av. Brasília, 3682 - Ed. Tower, Centro <br>
             89870-000 - Pinhalzinho - SC <br>
         </div>
     </footer>
-</div>
 </body>
 
 </html>
