--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <img src="../img/logo.png" height="24px" width="24px">
-                <a class="navbar-brand" href="#"> | PinhalMusic</a>
+                <a class="navbar-brand" href="#">PinhalMusic</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -54,12 +54,91 @@
         </nav>
     </header>
 
-    <footer id="footer" class="footer mt-auto py-3 bg-dark">
-        <div>
-            Todos os direitos revervados para<br>
-            PinhalMusic Instrumentos Musicais LTDA<br>
-            Av. Brasília, 3682 - Ed. Tower, Centro<br>
-            89870-000 - Pinhalzinho - SC<br>
+
+    <div class="container"><br>
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading" style="font-weight: bold;">A Empresa</h2>
+                <p class="lead" style="text-align: justify;">
+                    A PinhalMusic foi idealizada e fundada pelos irmãos Gabriel Kunz e Fernando Kunz, no ano de 2026.
+                    <br>
+                    Inicialmente, Gabriel e Fernando levavam como hobby a manutenção de instrumentos musicais da
+                    família, porém
+                    como o trabalho era visivelmente feito com muito carinho, demais pessoas da comunidade ficaram
+                    interessados
+                    e solicitaram os serviços de revitalização de instrumentos musicais aos irmãos Kunz.<br>
+                    Aos poucos o trabalho foi ganhando visibilidade, até que chegou o momento em que os irmãos começaram
+                    a comprar
+                    e revender instrumentos. Demonstrando sempre o cuidado com os instrumentos e amor à música, a loja
+                    foi crescendo
+                    e atingiu patamares nacionais, sendo hoje, uma das principais empresas de comercialização e reparos
+                    de
+                    instrumentos musicais do Brasil.
+                </p>
+            </div>
+            <div class="col-md-5">
+                <img src="../img/sobre-01.jpg" height="500px" width="500px">
+            </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading" style="font-weight: bold;">Missão</h2>
+                <p class="lead">
+                    Entregar aos clientes instrumentos musicais e equipamentos de qualidade, garantindo assim que suas
+                    habilidades musicais sejam exploradas ao máximo, despertando dessa forma o amor pela música no
+                    coração das pessoas.
+                </p>
+                <h2 class="featurette-heading" style="font-weight: bold;">Visão</h2>
+                <p class="lead">
+                    Ser uma empresa referência de comercialização e reparos de instrumentos musicais em território
+                    mundial, com constante
+                    aperfeiçoamento de processos e na prestação de serviços aos clientes.
+                </p>
+                <h2 class="featurette-heading" style="font-weight: bold;">Valores</h2>
+                <p class="lead">
+                    - Amor pela música e por sua história. <br>
+                    - Confiança. <br>
+                    - Só é bom para nós, se está sendo maravilhoso para o cliente.
+                </p>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <div class="col-md-5">
+                    <img src="../img/sobre-02.png" height="500px" width="500px">
+                </div>
+            </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading" style="font-weight: bold;">Conheça a nossa estrutura</h2>
+                <p class="lead">
+                    No vídeo ao lado a gente te mostra em um tour completo toda a estrutura da nossa loja física!
+                    <br><br>
+                    Se você curte instrumentos musicais, cuidado, há grandes riscos de você se apaixonar pela nossa
+                    loja!!
+                </p>
+            </div>
+            <div class="col-md-5">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QaUVCq-njD4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+
+    </div>
+
+    <footer class="footer bg-dark py-3" style="text-align: center;">
+        <div class="container-fluid text-muted">
+            Todos os direitos revervados <br>
+            PinhalMusic Instrumentos Musicais LTDA <br>
+            Av. Brasília, 3682 - Ed. Tower, Centro <br>
+            89870-000 - Pinhalzinho - SC <br>
         </div>
     </footer>
 </body>
