--- a/pages/contato.html
+++ b/pages/contato.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <img src="../img/logo.png" height="24px" width="24px">
-                <a class="navbar-brand" href="#"> | PinhalMusic</a>
+                <a class="navbar-brand" href="#">PinhalMusic</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -53,13 +53,80 @@
             </div>
         </nav>
     </header>
+    <br><br><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Contato</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header bg-dark text-white"><i class="fa fa-envelope"></i> Deixa seu recado pra
+                        gente
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="name">Nome</label>
+                                <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
+                                    placeholder="Informe seu nome" required>
+                            </div><br>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                                    placeholder="Informe seu e-mail" required>
+                                <small id="emailHelp" class="form-text text-muted">Prometemos não compartilhar seu
+                                    e-mail
+                                    com outras corporações! Sobre SPAM, fique tranquilo, a gente não faz isso.
+                                </small>
+                            </div><br>
+                            <div class="form-group">
+                                <label for="message">Mensagem</label>
+                                <textarea class="form-control" id="message" rows="6" required></textarea>
+                            </div><br>
+                            <div class="mx-auto">
+                                <button type="submit" class="btn btn-primary text-right">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4">
+                <div class="card bg-light mb-3">
+                    <div class="card-header bg-dark text-white"><i class="fa fa-home"></i> Onde a gente está?
+                    </div>
+                    <div class="card-body">
+                        <p>Av. Brasília, 3682, Centro <br>
+                            Edifício Tower <br>
+                            Pinhalzinho - SC - 89870-000<br>
+                            E-mail: contato@pinhalmusic.com.br <br>
+                            Telefone: (49) 3366-3366 <br>
+                            WhatsApp: (49) 9999-8888</p>
 
-    <footer id="footer" class="footer mt-auto py-3 bg-dark">
-        <div>
-            Todos os direitos revervados para<br>
-            PinhalMusic Instrumentos Musicais LTDA<br>
-            Av. Brasília, 3682 - Ed. Tower, Centro<br>
-            89870-000 - Pinhalzinho - SC<br>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d444.96230812736457!2d-52.987177962386895!3d-26.849541404963745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb2093fd3aad55%3A0xccd0db89669f2164!2sSC-160%2C%202250%20-%20Centro%2C%20Pinhalzinho%20-%20SC%2C%2089870-000!5e0!3m2!1spt-BR!2sbr!4v1617942390836!5m2!1spt-BR!2sbr"
+                            width="380" height="250" style="border-style: solid black;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer bg-dark py-3" style="text-align: center; position: absolute; bottom: 0; width: 100%;">
+        <div class="container-fluid text-muted">
+            Todos os direitos revervados <br>
+            PinhalMusic Instrumentos Musicais LTDA <br>
+            Av. Brasília, 3682 - Ed. Tower, Centro <br>
+            89870-000 - Pinhalzinho - SC <br>
         </div>
     </footer>
 </body>
