--- a/pages/contato.html
+++ b/pages/contato.html
@@ -120,8 +120,8 @@
             </div>
         </div>
     </div>
-
-    <footer class="footer bg-dark py-3" style="text-align: center; position: absolute; bottom: 0; width: 100%;">
+    <br><br><br><br><br>
+    <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
             Todos os direitos revervados <br>
             PinhalMusic Instrumentos Musicais LTDA <br>
