--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -124,7 +124,7 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QaUVCq-njD4"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/QaUVCq-njD4"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
