--- a/pages/contato.html
+++ b/pages/contato.html
@@ -114,7 +114,7 @@
 
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d444.96230812736457!2d-52.987177962386895!3d-26.849541404963745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb2093fd3aad55%3A0xccd0db89669f2164!2sSC-160%2C%202250%20-%20Centro%2C%20Pinhalzinho%20-%20SC%2C%2089870-000!5e0!3m2!1spt-BR!2sbr!4v1617942390836!5m2!1spt-BR!2sbr"
-                            width="380" height="250" style="border-style: solid black;" allowfullscreen="" loading="lazy"></iframe>
+                            width="100%" height="300" style="border-style: solid black;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
