--- a/pages/contato.html
+++ b/pages/contato.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./sobre.html">Sobre Nós</a>
@@ -58,7 +58,7 @@
             <div class="col">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Contato</li>
                     </ol>
                 </nav>
@@ -135,7 +135,6 @@
                         <a href="#"><img src="../img/facebook.png" height="64px" width="64px"></a>
                         <a href="#" style="padding-left: 25px;"><img src="../img/instagram.png" height="64px" width="64px"></a>
                         <a href="#" style="padding-left: 25px;"><img src="../img/whatsapp.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../img/telegram.png" height="64px" width="64px"></a>
                     </div>
                 </div>
             </div>
