--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <img src="/img/logo.png" height="24px" width="24px">
+                <img src="../img/logo.png" height="24px" width="24px">
                 <a class="navbar-brand" href="#">PinhalMusic</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/sobre.html">Sobre Nós</a>
+                            <a class="nav-link" href="sobre.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contato.html">Contato</a>
+                            <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -63,13 +63,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/banner.jpg" class="d-block w-100">
+                <img src="../img/banner.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="./img/banner2.jpg" class="d-block w-100">
+                <img src="../img/banner2.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="./img/banner3.jpg" class="d-block w-100">
+                <img src="../img/banner3.jpg" class="d-block w-100">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -86,7 +86,7 @@
     <br><br>
     <div class="card-group" style="text-align: center;">
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="./img/card-01.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="#"><img src="../img/card-01.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Nossa loja dispõe de um catálogo completo de instrumentos musicais de corda, teclas e
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="./img/card-02.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="#"><img src="../img/card-02.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Seja para a realização de pequenos reparos ou para grandes revitalizações, nossa equipe de
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="./img/card-03.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="#"><img src="../img/card-03.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Você sente que está na hora de ir ao próximo nível, porém não quer gastar muito para ter o
@@ -139,7 +139,7 @@
                 <br><br>
                 Clique abaixo para conhecer melhor a gente!!
             </p>
-            <a href="./pages/sobre.html" class="btn btn-primary">Sobre Nós</a>
+            <a href="sobre.html" class="btn btn-primary">Sobre Nós</a>
         </div>
     </div>
     <br><br>
@@ -157,7 +157,6 @@
                         <a href="#"><img src="../img/facebook.png" height="64px" width="64px"></a>
                         <a href="#" style="padding-left: 25px;"><img src="../img/instagram.png" height="64px" width="64px"></a>
                         <a href="#" style="padding-left: 25px;"><img src="../img/whatsapp.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../img/telegram.png" height="64px" width="64px"></a>
                     </div>
                 </div>
             </div>
