adicionando os icones nas paginas

--- a/pages/pages/venda.html
+++ b/pages/pages/venda.html
@@ -13,6 +13,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
         </script>
     <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="icon" type="imagem/png" href="../img/logo.png"/>
 </head>
 
 <body>
